bugfix: Additional information now visible when single column mode.

--- a/app/javascript/styles/mastodon/vocalodon.scss
+++ b/app/javascript/styles/mastodon/vocalodon.scss
@@ -59,3 +59,7 @@
     height: 90px;
 }
 
+.compose-panel .compose-form {
+  flex: 0;
+}
+
